Fixed bug#13111 - Modal dialogs may be overlapped by cluster menus.

--- a/var/httpd/htdocs/skins/Agent/default/css/Core.Agent.TicketMenuModuleCluster.css
+++ b/var/httpd/htdocs/skins/Agent/default/css/Core.Agent.TicketMenuModuleCluster.css
@@ -42,7 +42,7 @@
 }
 
 .Cluster > ul li:hover {
-    z-index: 5500;
+    z-index: 3500;
 }
 
 .Cluster ul li:hover ul,
